[tool.poetry]
package-mode = false
name = "pypost"
version = "0.1.0"
description = "Flexible and efficient posts data querying mechanism"
authors = ["Aleks <aleks@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.22.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.35"}
pydantic = "^2.9.2"
psycopg2-binary = "^2.9.6"
fastapi-filter = "^2.0.0"
alembic = "^1.11.1"
python-decouple = "^3.8"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
uvloop = "^0.20.0"
httptools = "^0.6.1"
asgi-lifespan = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
